src/css/main.css
/* ... */
.collapsible .static {
  cursor: pointer;
}

.a-canvas.state-dragging {
  cursor: grabbing;
}

code,
pre,
input,
textarea,
select {
  font-family: Consolas, Andale Mono, Monaco, Courier New, monospace;
}

.Select,
.wf-active code,
.wf-active pre,
.wf-active input,
.wf-active textarea,
.wf-active select {
  font-family: Roboto Mono, Consolas, Andale Mono, Monaco, Courier New, monospace;
}

.tagName {
  font-weight: 500;
}

.sidebar-title {
  background-color: #444;
  color: #aaa;
  display: flex;
  font-size: 12px;
  justify-content: space-between;
  padding: 6px 10px;
  position: relative;
  text-align: center;
}

.toolbar {
  background-color: #262626;
  color: #333;
  height: 32px;
  position: relative;
}

.toolbar * {
  margin-left: 0;
  padding: 8px;
  vertical-align: middle;
}

.toolbar a.button {
  margin: 0 6px 0 0;
}

.toolbar .active {
  background-color: #1faaf2;
  color: #fff;
}

.toolbar .active:hover {
  color: #fff !important;
}

.local-transform {
  padding-left: 10px;
}

.local-transform label {
  color: #aaa;
  padding-left: 5px;
}

.local-transform a.button {
  padding-top: 0;
}

.outliner {
  background: #2b2b2b;
  color: #868686;
  cursor: default;
  flex: 1 1 auto;
  font-size: 12px;
  height: calc(100% - 98px);
  outline: none;
  overflow-y: auto;
  padding: 0;
  position: fixed;
  top: 98px;
  width: 200px;
}

.outliner .option {
  display: flex;
  justify-content: space-between;
  padding: 4px;
  white-space: nowrap;
}

.outliner .option.active {
  background-color: #1faaf2;
  color: #fff;
}

.outliner .option .component:hover {
  color: #1faaf2;
}

.outliner .option.active .component:hover {
  color: #1888c1;
}

.outliner .option .icons {
  display: none;
  margin: 0 3px 0 10px;
}

.outliner .option .icons .button {
  color: #fff;
  font-size: 12px;
}

.outliner .option.active .icons {
  display: inline;
}

.outliner .fa {
  color: #aaa;
}

.outliner .active .fa {
  color: #fff;
}

a.flat-button {
  background-color: #262626;
  color: #bcbcbc;
  font-size: 11px;
  margin-left: 10px;
  padding: 5px;
  text-decoration: none;
}

a.flat-button:hover {
  color: #1faaf2;
}

.component-title {
  align-items: center;
  display: flex;
}

a.help-link {
  opacity: 0.4;
}

a.help-link:hover {
  opacity: 1;
}

#right-panels {
  align-items: stretch;
  display: flex;
  justify-content: flex-end;
  position: fixed;
  right: 0;
  top: 0;
}

#aframe-inspector-panels {
  display: flex;
  justify-content: space-between;
}

/* This is a temporaly hack, we should style the editor instead of overwriting
   the a-scene to fix the "display: block" issue. */
.aframe-inspector-opened a-scene {
  display: inline !important;
}

.aframe-inspector-opened a-scene .a-canvas {
  background-color: #191919;
  z-index: 9998;
}

.uploadcare-widget-button-open {
  background-color: #1eaaf1;
  border-radius: 0;
  cursor: pointer;
  margin-left: 10px;
  padding: 10px 15px;
}

.uploadcare-widget-button-open:hover {
  background-color: #346392;
}

.new_asset_options {
  margin: 10px;
}

.new_asset_options > ul {
  margin-left: 10px;
  padding: 5px;
}

.new_asset_options > ul > li {
  padding: 10px 0;
}

.new_asset_options .imageUrl {
  margin-left: 5px;
  width: 350px;
}

span.entity-name {
  color: #fff;
  font-family: Consolas, Andale Mono, Monaco, Courier New, monospace;
  font-size: 16px;
}

.add-component {
  width: 200px;
}

.Select-control {
  background-color: #222 !important;
  border: none;
  border-radius: 0;
  color: #1faaf2;
}

.Select-menu-outer {
  border: none;
}

.Select-menu-outer .is-focused {
  background-color: #1faaf2 !important;
  color: #fff;
}

.Select-option {
  background-color: #222 !important;
}

.select-widget {
  display: inline-block;
  width: 157px;
}

.Select-placeholder,
.Select--single > .Select-control .Select-value {
  color: #1faaf2 !important;
}

.Select-value-label {
  color: #1faaf2 !important;
}

.row .Select-control {
  font-size: 11px;
  height: 24px;
}

.row .Select-placeholder,
.row .Select--single > .Select-control .Select-value {
  line-height: 19px;
}

.row .Select-input {
  height: 22px;
}

.row input[type=text],
.row input[type=number],
.row input.string,
.row input.number {
  background: #222;
  border: 1px solid transparent;
  color: #1faaf2;
  min-height: 20px;
  padding-left: 5px;
  padding-right: 5px;
}

.help-lists {
  display: flex;
  justify-content: space-around;
}

.help-list {
  list-style: none;
  margin: 0;
  padding: 0 0 10px;
  width: 350px;
}

.help-list li {
  margin-right: 40px;
}

.help-key-unit {
  line-height: 1.8;
  margin-right: 2em;
  padding: 5px 0;
}

.help-key {
  bottom: 2px;
  margin-right: 4px;
  min-width: 60px;
  position: relative;
}

.help-key span {
  background-color: #2e2e2e;
  background-repeat: repeat-x;
  border: 1px solid #666;
  border-radius: 3px;
  box-shadow: 0 0 5px #000;
  color: #999;
  display: inline-block;
  font-size: 12px;
  padding: 0 8px;
  text-align: center;
}

.help-key-def {
  color: #bbb;
  display: inline-block;
  margin-left: 1em;
}

.add-component {
  text-align: left;
}

.add-component .option {
  display: flex;
  justify-content: space-between;
}

.add-component .option span {
  color: #1faaf2;
}

.Select-menu-outer .is-focused span {
  color: #fff;
}

.add-component-container {
  align-items: center;
  background-color: #2b2b2b;
  display: flex;
  justify-content: center;
  padding: 10px;
}

.aregistry-button {
  font-size: 12px;
  margin-left: 10px;
  padding: 8px;
}

.aregistry-button:hover {
  background-color: #1faaf2;
}

.aregistry-button img {
  height: 20px;
  width: 20px;
}

.components .row .color_value {
  margin: 0 0 0 5px;
  width: 68px;
}

.assets.search {
  margin-top: 10px;
  width: 200px;
}

.assets.search .fa-search {
  top: 7px;
}

.gallery a.fa.texture-link {
  box-shadow: 0 0 14px -1px rgba(0, 0, 0, 0.75);
  position: fixed;
}

